--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       ZOOKEEPER_TICK_TIME: 2000
       ZOOKEEPER_INIT_LIMIT: 5
       ZOOKEEPER_SYNC_LIMIT: 2
-      ZOOKEEPER_SERVERS: zookeeper-1:2888:3888;zookeeper-2:2888:3888;zookeeper-3:2888:3888
+      ZOOKEEPER_SERVERS: tasks.zookeeper-1:2888:3888;tasks.zookeeper-2:2888:3888;tasks.zookeeper-3:2888:3888
     networks:
       - kafka
 
@@ -33,7 +33,7 @@ services:
       ZOOKEEPER_TICK_TIME: 2000
       ZOOKEEPER_INIT_LIMIT: 5
       ZOOKEEPER_SYNC_LIMIT: 2
-      ZOOKEEPER_SERVERS: zookeeper-1:2888:3888;zookeeper-2:2888:3888;zookeeper-3:2888:3888
+      ZOOKEEPER_SERVERS: tasks.zookeeper-1:2888:3888;tasks.zookeeper-2:2888:3888;tasks.zookeeper-3:2888:3888
     networks:
       - kafka
 
@@ -51,7 +51,7 @@ services:
       ZOOKEEPER_TICK_TIME: 2000
       ZOOKEEPER_INIT_LIMIT: 5
       ZOOKEEPER_SYNC_LIMIT: 2
-      ZOOKEEPER_SERVERS: zookeeper-1:2888:3888;zookeeper-2:2888:3888;zookeeper-3:2888:3888
+      ZOOKEEPER_SERVERS: tasks.zookeeper-1:2888:3888;tasks.zookeeper-2:2888:3888;tasks.zookeeper-3:2888:3888
     networks:
       - kafka
 
@@ -69,7 +69,7 @@ services:
       - zookeeper-3
     environment:
       KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper-1:2181,zookeeper-2:2181,zookeeper-3:2181
+      KAFKA_ZOOKEEPER_CONNECT: tasks.zookeeper-1:2181,tasks.zookeeper-2:2181,tasks.zookeeper-3:2181
       KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka-1:9092
       KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT
@@ -93,7 +93,7 @@ services:
       - zookeeper-3
     environment:
       KAFKA_BROKER_ID: 2
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper-1:2181,zookeeper-2:2181,zookeeper-3:2181
+      KAFKA_ZOOKEEPER_CONNECT: tasks.zookeeper-1:2181,tasks.zookeeper-2:2181,tasks.zookeeper-3:2181
       KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka-2:9092
       KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT
@@ -116,7 +116,7 @@ services:
       - zookeeper-3
     environment:
       KAFKA_BROKER_ID: 3
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper-1:2181,zookeeper-2:2181,zookeeper-3:2181
+      KAFKA_ZOOKEEPER_CONNECT: tasks.zookeeper-1:2181,tasks.zookeeper-2:2181,tasks.zookeeper-3:2181
       KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka-3:9092
       KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT
