--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,10 @@ services:
       ZOOKEEPER_SERVERS: tasks.zookeeper-1:2888:3888;tasks.zookeeper-2:2888:3888;tasks.zookeeper-3:2888:3888
     networks:
       - kafka
+    logging:
+      driver: gelf
+      options:
+        gelf-address: "udp://127.0.0.1:12201"
 
   zookeeper-2:
     image: confluentinc/cp-zookeeper:latest
@@ -36,6 +40,10 @@ services:
       ZOOKEEPER_SERVERS: tasks.zookeeper-1:2888:3888;tasks.zookeeper-2:2888:3888;tasks.zookeeper-3:2888:3888
     networks:
       - kafka
+    logging:
+      driver: gelf
+      options:
+        gelf-address: "udp://127.0.0.1:12201"
 
   zookeeper-3:
     image: confluentinc/cp-zookeeper:latest
@@ -54,6 +62,10 @@ services:
       ZOOKEEPER_SERVERS: tasks.zookeeper-1:2888:3888;tasks.zookeeper-2:2888:3888;tasks.zookeeper-3:2888:3888
     networks:
       - kafka
+    logging:
+      driver: gelf
+      options:
+        gelf-address: "udp://127.0.0.1:12201"
 
   kafka-1:
     image: confluentinc/cp-kafka:latest
@@ -77,8 +89,11 @@ services:
     networks:
       - kafka
       - coalbase_backend
-      
-      
+    logging:
+      driver: gelf
+      options:
+        gelf-address: "udp://127.0.0.1:12201"
+
   kafka-2:
     image: confluentinc/cp-kafka:latest
     deploy:
@@ -101,7 +116,11 @@ services:
     networks:
       - kafka
       - coalbase_backend
-      
+    logging:
+      driver: gelf
+      options:
+        gelf-address: "udp://127.0.0.1:12201"
+
   kafka-3:
     image: confluentinc/cp-kafka:latest
     deploy:
@@ -124,7 +143,11 @@ services:
     networks:
       - kafka
       - coalbase_backend
-      
+    logging:
+      driver: gelf
+      options:
+        gelf-address: "udp://127.0.0.1:12201"
+
 networks:
   kafka:
   coalbase_backend:
