update restart policy

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: confluentinc/cp-zookeeper:latest
     deploy:
       restart_policy:
-        condition: on-failure
+        condition: always
         delay: 5s
         max_attempts: 3
         window: 120s
@@ -27,7 +27,7 @@ services:
     image: confluentinc/cp-zookeeper:latest
     deploy:
       restart_policy:
-        condition: on-failure
+        condition: always
         delay: 5s
         max_attempts: 3
         window: 120s
@@ -49,7 +49,7 @@ services:
     image: confluentinc/cp-zookeeper:latest
     deploy:
       restart_policy:
-        condition: on-failure
+        condition: always
         delay: 5s
         max_attempts: 3
         window: 120s
@@ -71,7 +71,7 @@ services:
     image: confluentinc/cp-kafka:latest
     deploy:
       restart_policy:
-        condition: on-failure
+        condition: always
         delay: 5s
         max_attempts: 3
         window: 120s
@@ -98,7 +98,7 @@ services:
     image: confluentinc/cp-kafka:latest
     deploy:
       restart_policy:
-        condition: on-failure
+        condition: always
         delay: 5s
         max_attempts: 3
         window: 120s
@@ -125,7 +125,7 @@ services:
     image: confluentinc/cp-kafka:latest
     deploy:
       restart_policy:
-        condition: on-failure
+        condition: always
         delay: 5s
         max_attempts: 3
         window: 120s
