--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 ---
 version: '3'
+
 services:
+
   zookeeper-1:
     image: confluentinc/cp-zookeeper:latest
     deploy:
@@ -18,10 +20,10 @@ services:
       ZOOKEEPER_SERVERS: tasks.zookeeper-1:2888:3888;tasks.zookeeper-2:2888:3888;tasks.zookeeper-3:2888:3888
     networks:
       - kafka
-  #    logging:
-  #      driver: gelf
-  #      options:
-  #        gelf-address: "udp://127.0.0.1:12201"
+    logging:
+      driver: gelf
+      options:
+        gelf-address: "udp://archilab-infra:12201"
 
   zookeeper-2:
     image: confluentinc/cp-zookeeper:latest
@@ -40,10 +42,10 @@ services:
       ZOOKEEPER_SERVERS: tasks.zookeeper-1:2888:3888;tasks.zookeeper-2:2888:3888;tasks.zookeeper-3:2888:3888
     networks:
       - kafka
-  #    logging:
-  #      driver: gelf
-  #      options:
-  #        gelf-address: "udp://127.0.0.1:12201"
+    logging:
+      driver: gelf
+      options:
+        gelf-address: "udp://archilab-infra:12201"
 
   zookeeper-3:
     image: confluentinc/cp-zookeeper:latest
@@ -62,10 +64,10 @@ services:
       ZOOKEEPER_SERVERS: tasks.zookeeper-1:2888:3888;tasks.zookeeper-2:2888:3888;tasks.zookeeper-3:2888:3888
     networks:
       - kafka
-  #    logging:
-  #      driver: gelf
-  #      options:
-  #        gelf-address: "udp://127.0.0.1:12201"
+    logging:
+      driver: gelf
+      options:
+        gelf-address: "udp://archilab-infra:12201"
 
   kafka-1:
     image: confluentinc/cp-kafka:latest
@@ -89,10 +91,10 @@ services:
     networks:
       - kafka
       - coalbase_backend
-  #    logging:
-  #      driver: gelf
-  #      options:
-  #        gelf-address: "udp://127.0.0.1:12201"
+    logging:
+      driver: gelf
+      options:
+        gelf-address: "udp://archilab-infra:12201"
 
   kafka-2:
     image: confluentinc/cp-kafka:latest
@@ -116,10 +118,10 @@ services:
     networks:
       - kafka
       - coalbase_backend
-  #    logging:
-  #      driver: gelf
-  #      options:
-  #        gelf-address: "udp://127.0.0.1:12201"
+    logging:
+      driver: gelf
+      options:
+        gelf-address: "udp://archilab-infra:12201"
 
   kafka-3:
     image: confluentinc/cp-kafka:latest
@@ -143,10 +145,10 @@ services:
     networks:
       - kafka
       - coalbase_backend
-#    logging:
-#      driver: gelf
-#      options:
-#        gelf-address: "udp://127.0.0.1:12201"
+    logging:
+      driver: gelf
+      options:
+        gelf-address: "udp://archilab-infra:12201"
 
 networks:
   kafka:
